--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,6 @@
     <string name="history">История</string>
     <string name="update_db">Обновить базу данных</string>
     <string name="exit">Выход</string>
+    <string name="shop">Магазин:</string>
+    <string name="select_shop">Выбрать магазин</string>
 </resources>
