--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="start">Start</string>
     <string name="history">History</string>
     <string name="update_db">Update database</string>
+    <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <string name="shop">Shop:</string>
     <string name="select_shop">Select shop</string>
