--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,46 @@
     <string name="exit">Exit</string>
     <string name="shop">Shop:</string>
     <string name="select_shop">Select shop</string>
+    <string name="city_moscow">Moscow</string>
+    <string name="city_st_petersburg">St. Petersburg</string>
+    <string name="city_astrakhan">Astrakhan</string>
+    <string name="city_volgograd">Volgograd</string>
+    <string name="city_voronezh">Voronezh</string>
+    <string name="city_ekaterinburg">Ekaterinburg</string>
+    <string name="city_ivanovo">Ivanovo</string>
+    <string name="city_irkutsk">Irkutsk</string>
+    <string name="city_krasnodar">Krasnodar</string>
+    <string name="city_krasnoyarsk">Krasnoyarsk</string>
+    <string name="city_lipetsk">Lipetsk</string>
+    <string name="city_murmansk">Murmansk</string>
+    <string name="city_nizhny_novgorod">Nizhny Novgorod</string>
+    <string name="city_novosibirsk">Novosibirsk</string>
+    <string name="city_novocherkassk">Novocherkassk</string>
+    <string name="city_omsk">Omsk</string>
+    <string name="city_orenburg">Orenburg</string>
+    <string name="city_rostov_on_don">Rostov-on-Don</string>
+    <string name="city_saratov">Saratov</string>
+    <string name="city_sochi">Sochi</string>
+    <string name="city_stavropol">Stavropol</string>
+    <string name="city_sterlitamak">Sterlitamak</string>
+    <string name="city_surgut">Surgut</string>
+    <string name="city_syktyvkar">Syktyvkar</string>
+    <string name="city_tolyatti">Tolyatti</string>
+    <string name="city_tyumen">Tyumen</string>
+    <string name="city_ufa">Ufa</string>
+    <string name="city_cherepovets">Cherepovets</string>
+    <string name="service_clearing_settlement">Clearing settlement</string>
+    <string name="service_cosmetics">Cosmetics</string>
+    <string name="service_playground">Playground</string>
+    <string name="service_fish_island">Fish island</string>
+    <string name="service_bakery">Bakery</string>
+    <string name="service_cookery">Cookery</string>
+    <string name="service_taxi_ordering">Taxi ordering</string>
+    <string name="service_pharmacy">Pharmacy</string>
+    <string name="service_ordering_food">Ordering food</string>
+    <string name="service_degustation">Degustation</string>
+    <string name="service_cafe">Cafe</string>
+    <string name="service_gift_cards">Gift cards</string>
+    <string name="service_parking">Parking</string>
+    <string name="service_point_of_issuing_orders">Point of issuing orders</string>
 </resources>
