--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,46 @@
     <string name="exit">Выход</string>
     <string name="shop">Магазин:</string>
     <string name="select_shop">Выбрать магазин</string>
+    <string name="city_moscow">Москва</string>
+    <string name="city_st_petersburg">Санкт-Петербург</string>
+    <string name="city_astrakhan">Астрахань</string>
+    <string name="city_volgograd">Волгоград</string>
+    <string name="city_voronezh">Воронеж</string>
+    <string name="city_ekaterinburg">Екатеринбург</string>
+    <string name="city_ivanovo">Иваново</string>
+    <string name="city_irkutsk">Иркутск</string>
+    <string name="city_krasnodar">Краснодар</string>
+    <string name="city_krasnoyarsk">Красноярск</string>
+    <string name="city_lipetsk">Липецк</string>
+    <string name="city_murmansk">Мурманск</string>
+    <string name="city_nizhny_novgorod">Нижний Новгород</string>
+    <string name="city_novosibirsk">Новосибирск</string>
+    <string name="city_novocherkassk">Новочеркасск</string>
+    <string name="city_omsk">Омск</string>
+    <string name="city_orenburg">Оренбург</string>
+    <string name="city_rostov_on_don">Ростов-на-Дону</string>
+    <string name="city_saratov">Саратов</string>
+    <string name="city_sochi">Сочи</string>
+    <string name="city_stavropol">Ставрополь</string>
+    <string name="city_sterlitamak">Стерлитамак</string>
+    <string name="city_surgut">Сургут</string>
+    <string name="city_syktyvkar">Сыктывкар</string>
+    <string name="city_tolyatti">Тольятти</string>
+    <string name="city_tyumen">Тюмень</string>
+    <string name="city_ufa">Уфа</string>
+    <string name="city_cherepovets">Череповец</string>
+    <string name="service_clearing_settlement">Оплата карточкой</string>
+    <string name="service_cosmetics">Бутик косметики</string>
+    <string name="service_playground">Детская площадка</string>
+    <string name="service_fish_island">Рыбный остров</string>
+    <string name="service_bakery">Пекарня</string>
+    <string name="service_cookery">Кулинария</string>
+    <string name="service_taxi_ordering">Заказ такси</string>
+    <string name="service_pharmacy">Аптека</string>
+    <string name="service_ordering_food">Блюда на заказ</string>
+    <string name="service_degustation">Дегустации</string>
+    <string name="service_cafe">Кафе</string>
+    <string name="service_gift_cards">Подарочные карты</string>
+    <string name="service_parking">Парковка</string>
+    <string name="service_point_of_issuing_orders">ПВЗ интернет-магазина</string>
 </resources>
