Code generation completed

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -52,32 +52,5 @@
     <string name="service_gift_cards">Подарочные карты</string>
     <string name="service_parking">Парковка</string>
     <string name="service_point_of_issuing_orders">ПВЗ интернет-магазина</string>
-    <string name="shop_moscow_hypermarket_ok_kirovogradskaya_kolumbus">Гипермаркет О'КЕЙ «Кировоградская Колумбус»</string>
-    <string name="shop_st_petersburg_supermarket_ok_kolpino_tverskaya">Супермаркет О’КЕЙ «Колпино Тверская»</string>
-    <string name="shop_astrakhan_hypermarket_ok_astrakhan_vokzalnaya">Гипермаркет О’КЕЙ «Астрахань Вокзальная»</string>
-    <string name="shop_volgograd_supermarket_ok_volgograd_voroshilovskiy">Супермаркет О’КЕЙ «Волгоград Ворошиловский»</string>
-    <string name="shop_voronezh_supermarket_ok_voronezh_zhukova">Супермаркет О’КЕЙ «Воронеж Жукова»</string>
-    <string name="shop_ekaterinburg_hypermarket_ok_ekaterinburg_raduga">Гипермаркет О’КЕЙ «Екатеринбург Радуга»</string>
-    <string name="shop_ivanovo_hypermarket_ok_ivanovo_lezhnevskaya_topol">Гипермаркет О’КЕЙ «Иваново Лежневская Тополь»</string>
-    <string name="shop_irkutsk_hypermarket_ok_irkutsk_komsomoll">Гипермаркет О’КЕЙ «Иркутск КомсоМолл»</string>
-    <string name="shop_krasnodar_hypermarket_ok_krasnodar_oz">Гипермаркет О’КЕЙ «Краснодар Oz»</string>
-    <string name="shop_krasnoyarsk_hypermarket_ok_krasnoyarsk_sibirskiy">Гипермаркет О’КЕЙ «Красноярск Сибирский»</string>
-    <string name="shop_lipetsk_supermarket_ok_lipetsk_petra_smorodina">Супермаркет О'КЕЙ «Липецк Петра Смородина»</string>
-    <string name="shop_murmansk_hypermarket_ok_murmansk_shmidta">Гипермаркет О’КЕЙ «Мурманск Шмидта»</string>
-    <string name="shop_nizhniy_novgorod_hypermarket_ok_nizhniy_novgorod_sovetskaya">Гипермаркет О’КЕЙ «Нижний Новгород Советская»</string>
-    <string name="shop_novosibirsk_hypermarket_ok_novosibirsk_malinka">Гипермаркет О’КЕЙ «Новосибирск Малинка»</string>
-    <string name="shop_novocherkassk_supermarket_ok_novocherkassk_magnitnyy">Супермаркет О’КЕЙ «Новочеркасск Магнитный»</string>
-    <string name="shop_omsk_supermarket_ok_omsk_70_let_oktyabrya">Супермаркет О'КЕЙ «Омск 70 лет Октября»</string>
-    <string name="shop_orenburg_hypermarket_ok_orenburg_salmyshskaya">Гипермаркет О'КЕЙ «Оренбург Салмышская»</string>
-    <string name="shop_rostov_on_don_hypermarket_ok_rostov_on_don_komarova">Гипермаркет О’КЕЙ «Ростов-на-Дону Комарова»</string>
-    <string name="shop_saratov_supermarket_ok_saratov_tankistov">Супермаркет О’КЕЙ «Саратов Танкистов»</string>
-    <string name="shop_sochi_hypermarket_ok_sochi_moremoll">Гипермаркет О’КЕЙ «Сочи МореМолл»</string>
-    <string name="shop_stavropol_hypermarket_ok_stavropol_dovatortsev">Гипермаркет О’КЕЙ «Ставрополь Доваторцев»</string>
-    <string name="shop_sterlitamak_hypermarket_ok_sterlitamak_khudayberdina">Гипермаркет О'КЕЙ «Стерлитамак Худайбердина»</string>
-    <string name="shop_surgut_hypermarket_ok_surgut_nefteyuganskoe_aura">Гипермаркет О’КЕЙ «Сургут Нефтеюганское Аура»</string>
-    <string name="shop_syktyvkar_hypermarket_ok_syktyvkar_oktyabrskiy_iyun">Гипермаркет О’КЕЙ «Сыктывкар Октябрьский Июнь»</string>
-    <string name="shop_tolyatti_supermarket_ok_tolyatti_sportivnaya_malina">Супермаркет О’КЕЙ «Тольятти Спортивная Малина»</string>
-    <string name="shop_tyumen_hypermarket_ok_tyumen_fedyuninskogo_ostrov">Гипермаркет О’КЕЙ «Тюмень Федюнинского Остров»</string>
-    <string name="shop_ufa_hypermarket_ok_ufa_planeta">Гипермаркет О’КЕЙ «Уфа Планета»</string>
-    <string name="shop_cherepovets_hypermarket_ok_cherepovets_raakhe">Гипермаркет О'КЕЙ «Череповец Раахе»</string>
+    <string name="shop_moscow_hypermarket_ok_kirovogradskaya_kolumbus">Гипермаркет О\'КЕЙ «Кировоградская Колумбус»</string>
 </resources>
