--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,9 @@
     <string name="exit">Exit</string>
     <string name="shop">Shop:</string>
     <string name="select_shop">Select shop</string>
-    <string name="filter">filter</string>
-    <string name="nearest_shop">Nearest shop</string>
+    <string name="filter">Filter</string>
+    <string name="shop_details">Shop details</string>
+    <string name="nearest_shop">The nearest shop</string>
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
     <string name="city_astrakhan">Astrakhan</string>
