--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,15 @@
     <string name="filter">Filter</string>
     <string name="shop_details">Shop details</string>
     <string name="nearest_shop">The nearest shop</string>
+    <string name="shop_is_not_selected">The shop is not selected</string>
+    <string name="phone">Phone:</string>
+    <string name="work_hours">Work hours:</string>
+    <string name="square">Square:</string>
+    <string name="opening_date">Opening date:</string>
+    <string name="parking_places">Parking places:</string>
+    <string name="number_of_cashboxes">Number of cashboxes:</string>
+    <string name="services">Services:</string>
+    <string name="no_value" translatable="false">--------</string>
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
     <string name="city_astrakhan">Astrakhan</string>
