Shop details UI

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,6 +23,7 @@
     <string name="parking_places">Парковочные места:</string>
     <string name="number_of_cashboxes">Количество касс:</string>
     <string name="services">Услуги:</string>
+    <string name="photos">Фото:</string>
     <string name="city_moscow">Москва</string>
     <string name="city_st_petersburg">Санкт-Петербург</string>
     <string name="city_astrakhan">Астрахань</string>
