--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,9 +13,9 @@
     <string name="show_list">Показать список</string>
     <string name="hide_list">Скрыть список</string>
     <string name="filter">Фильтр</string>
-    <string name="shop_details">Информация о магазине</string>
+    <string name="details_for_shop">Информация о магазине</string>
     <string name="nearest_shop">Ближайший магазин</string>
-    <string name="shop_is_not_selected">Магазин не выбран</string>
+    <string name="undefined_shop">Магазин не выбран</string>
     <string name="phone">Телефон:</string>
     <string name="work_hours">Часы работы:</string>
     <string name="square">Площадь:</string>
