--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,6 +26,8 @@
     <string name="photos">Фото:</string>
     <string name="all_day">Круглосуточно</string>
     <string name="square_value">%1d м&#178;</string>
+    <string name="hypermarket">Гипермаркет</string>
+    <string name="supermarket">Супермаркет</string>
     <string name="city_moscow">Москва</string>
     <string name="city_st_petersburg">Санкт-Петербург</string>
     <string name="city_astrakhan">Астрахань</string>
