--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="photos">Photos:</string>
     <string name="all_day">All day</string>
     <string name="square_value">%1d m&#178;</string>
+    <string name="hypermarket">Hypermarket</string>
+    <string name="supermarket">Supermarket</string>
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
     <string name="city_astrakhan">Astrakhan</string>
