--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,6 +185,7 @@
     <string name="shop_ufa_hypermarket_ok_ufa_planeta">Hypermarket OK «Ufa Planeta»</string>
     <string name="shop_cherepovets_hypermarket_ok_cherepovets_raakhe">Hypermarket OK «Cherepovets Raakhe»</string>
 
+    <string name="title_activity_main">OK</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_select_shop">Select shop</string>
 
