--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -188,6 +188,8 @@
     <string name="title_activity_main">О\'КЕЙ</string>
     <string name="title_activity_settings">Настройки</string>
     <string name="title_activity_select_shop">Выбор магазина</string>
+    <string name="title_activity_history">История</string>
+    <string name="title_activity_history_details">Описание</string>
 
     <string name="pref_header_general">Основные</string>
     <string name="pref_header_notifications">Уведомления</string>
