Remove services table

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -133,6 +133,7 @@
     <string name="shop_st_petersburg_hypermarket_ok_zhukova">Гипермаркет О’КЕЙ «Жукова»</string>
     <string name="shop_st_petersburg_supermarket_ok_kolpino_trudyashchikhsya">Супермаркет О’КЕЙ «Колпино Трудящихся»</string>
     <string name="shop_st_petersburg_supermarket_ok_kolpino_tverskaya">Супермаркет О’КЕЙ «Колпино Тверская»</string>
+    <string name="shop_st_petersburg_hypermarket_ok_partizana_germana">Гипермаркет О’КЕЙ «Партизана Германа»</string>
     <string name="shop_astrakhan_hypermarket_ok_astrakhan_alimpik">Гипермаркет О’КЕЙ «Астрахань Алимпик»</string>
     <string name="shop_astrakhan_supermarket_ok_astrakhan_tri_kota">Супермаркет О’КЕЙ «Астрахань Три кота»</string>
     <string name="shop_astrakhan_hypermarket_ok_astrakhan_vokzalnaya">Гипермаркет О’КЕЙ «Астрахань Вокзальная»</string>
