--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,7 @@
     <string name="shop_st_petersburg_hypermarket_ok_zhukova">Hypermarket OK «Zhukova»</string>
     <string name="shop_st_petersburg_supermarket_ok_kolpino_trudyashchikhsya">Supermarket OK «Kolpino Trudyashchikhsya»</string>
     <string name="shop_st_petersburg_supermarket_ok_kolpino_tverskaya">Supermarket OK «Kolpino Tverskaya»</string>
+    <string name="shop_st_petersburg_hypermarket_ok_partizana_germana">Hypermarket OK «Partizana Germana»</string>
     <string name="shop_astrakhan_hypermarket_ok_astrakhan_alimpik">Hypermarket OK «Astrakhan Alimpik»</string>
     <string name="shop_astrakhan_supermarket_ok_astrakhan_tri_kota">Supermarket OK «Astrakhan Tri kota»</string>
     <string name="shop_astrakhan_hypermarket_ok_astrakhan_vokzalnaya">Hypermarket OK «Astrakhan Vokzalnaya»</string>
