--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,9 +29,12 @@
     <string name="services">Услуги:</string>
     <string name="photos">Фото:</string>
     <string name="all_day">Круглосуточно</string>
-    <string name="square_value">%1d м&#178;</string>
+    <string name="square_value">%1$d м&#178;</string>
     <string name="hypermarket">Гипермаркет</string>
     <string name="supermarket">Супермаркет</string>
+
+    <string name="time">Время: %1$s</string>
+    <string name="rub_currency">%1$5.2f руб.</string>
 
     <string name="city_moscow">Москва</string>
     <string name="city_st_petersburg">Санкт-Петербург</string>
