--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
 
     <string name="time">Time: %1$s</string>
     <string name="rub_currency">%1$5.2f rub.</string>
+    <string name="rub_currency_count">%1$5.2f rub. x %2$5.2f</string>
+    <string name="category">Category</string>
 
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
