--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,23 @@
 <resources>
     <string name="app_name">OK Goods</string>
 
+    <string name="title_activity_main">OK</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_select_shop">Select shop</string>
+    <string name="title_activity_history">History</string>
+    <string name="title_activity_history_details">History details</string>
+
+    <string name="pref_header_general">General</string>
+    <string name="pref_header_notifications">Notifications</string>
+    <string name="pref_title_general_city">City</string>
+    <string name="pref_description_general_city">Select your city</string>
+    <string name="pref_title_notifications_show_notification">Show notification</string>
+    <string name="pref_description_notifications_show_notification">Enables notification</string>
+
+    <string name="rub_currency">%1$.2f rub.</string>
+    <string name="rub_currency_count">%1$.2f rub. x %2$.1f</string>
+    <string name="good_details">Good details</string>
+
     <string name="add_good">Add good</string>
     <string name="delete_goods">Delete goods</string>
     <string name="start">Start</string>
@@ -34,8 +51,7 @@
     <string name="supermarket">Supermarket</string>
 
     <string name="time">Time: %1$s</string>
-    <string name="rub_currency">%1$.2f rub.</string>
-    <string name="rub_currency_count">%1$.2f rub. x %2$.1f</string>
+    <string name="add_good_to_list">Add good to list</string>
 
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
@@ -189,19 +205,6 @@
     <string name="shop_ufa_hypermarket_ok_ufa_iyun">Hypermarket OK «Ufa Iyun»</string>
     <string name="shop_ufa_hypermarket_ok_ufa_planeta">Hypermarket OK «Ufa Planeta»</string>
     <string name="shop_cherepovets_hypermarket_ok_cherepovets_raakhe">Hypermarket OK «Cherepovets Raakhe»</string>
-
-    <string name="title_activity_main">OK</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_select_shop">Select shop</string>
-    <string name="title_activity_history">History</string>
-    <string name="title_activity_history_details">History details</string>
-
-    <string name="pref_header_general">General</string>
-    <string name="pref_header_notifications">Notifications</string>
-    <string name="pref_title_general_city">City</string>
-    <string name="pref_description_general_city">Select your city</string>
-    <string name="pref_title_notifications_show_notification">Show notification</string>
-    <string name="pref_description_notifications_show_notification">Enables notification</string>
 
     <string name="no_value" translatable="false">--------</string>
 </resources>
