--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
-Show goods
 Add goods
 Remove goods
 Add aproximate cost
@@ -10,7 +9,7 @@ Change UI on stop
 Allow to complete good
 Fade out for completed good
 Add to history
-Options for history (Save/Count/Details)
+Options for history (Save/Count/Save details)
 Use history to add goods
 Show good details in history
 Show good details in goods list
