--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_select_shop">Выбор магазина</string>
     <string name="title_activity_history">История</string>
     <string name="title_activity_history_details">Описание</string>
+    <string name="title_activity_goods_catalog">Каталог товаров</string>
 
     <string name="pref_header_general">Основные</string>
     <string name="pref_header_notifications">Уведомления</string>
