--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_select_shop">Select shop</string>
     <string name="title_activity_history">History</string>
     <string name="title_activity_history_details">History details</string>
+    <string name="title_activity_goods_catalog">Goods catalog</string>
 
     <string name="pref_header_general">General</string>
     <string name="pref_header_notifications">Notifications</string>
