--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,11 +56,12 @@
     <string name="hypermarket">Hypermarket</string>
     <string name="supermarket">Supermarket</string>
 
-    <string name="time">Time: %1$s</string>
-    <string name="no_information">No information</string>
-
     <string name="show_catalog">Show catalog</string>
     <string name="hide_catalog">Hide catalog</string>
+    <string name="expand">Expand</string>
+
+    <string name="time">Time: %1$s</string>
+    <string name="no_information">No information</string>
 
     <string name="city_moscow">Moscow</string>
     <string name="city_st_petersburg">St. Petersburg</string>
